Fixing footer alignment for mobile

--- a/src/_sass/components/_footer.scss
+++ b/src/_sass/components/_footer.scss
@@ -10,7 +10,7 @@ footer {
 	position: absolute;
   bottom: 0;
   width: 95%;
-  height: 5rem;
+  height: 15vh;
 }
 
 footer .coffeeBadge{
@@ -23,7 +23,9 @@ footer .copyright{
 
 /*Desktop Query*/
 @media only screen and (min-width: 768px) {
-
+ footer {
+   height: 10vh;
+ }
 }
 
 /*Mobile Query*/
