--- a/src/_sass/layout/_layout.scss
+++ b/src/_sass/layout/_layout.scss
@@ -13,7 +13,7 @@
 }
 
 .content-container {
-  padding-bottom: 5rem;    /* Footer height */
+  padding-bottom: 15vh;    /* Footer height */
 }
 
 
